Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,28 +7,21 @@
 <h5>Pondělí, 22. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>VE DNE 17.11.2021 JE JÍDELNA ZAVŘENÁ</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Vývar se zeleninou a celestýnskými nudlemi</strong>
+<strong>Vývar se zeleninou a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na zázvoru a slanině s rýží</strong>
+<strong>Vepřová plec s cibulovou omáčkou a rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s kuřecím masem a sýrovou omáčkou</strong>
+<strong>Špagety peperoncino i salsicia s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
@@ -59,6 +52,16 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 22.11.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Tiramisu</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Krémová cibulová polévka na bílém víně, parmazánový toast samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
@@ -80,7 +83,8 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Zeleninové kari, restované tofu, jasmínová ryze s limetkovym listem, koriandr </div>
+<div class="polozka"><span class="poradi">3. </span>300g Zeleninové kari, restované tofu, jasmínová rýže s limetkovým listem, koriandr <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 </ul>
@@ -156,7 +160,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s kaparovo-horcicnym maslem, stouchane brambory s kapustou, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s kaparovo-horcicnym maslem, bramborovy salat s cerstvymi okurkami, petrzelkou a majonezou 175</li><li>Lasagne s hovezim a krutim masem, rajcaty, pecenymi paprikami a zelenymi bylinkami, zapecene ve smetanove omacce, salatek {L} 139</li><li>Smazene rizecky z mladeho divocaka a selete domaciho, bramborovy salat s cerstvymi okurkami, petrzelkou a majonezou, citron {L} 169</li><li>Pecene kapie, lilky a cukety zapecene s goudou a zelenymi bylinkami, cocka s ryzi, okurkove tzatziki 139</li></ol>
+<ol><li>Peceny cerstvy pstruh s bylinkovym pestem se susenymi rajcaty, cervena cocka s cibulkou, salatek 139</li><li>Pecena cerstva kambala s bylinkovym pestem se susenymi rajcaty, cervena cocka s cibulkou, salatek 169</li><li>Burrito s restovanymi krutimi gyros nudlickami, pekingskym zelim a rajcetem, pecene brambory, okurkove tzatziki, pikantni zeleninove cukemono {L} 139</li><li>Peceny kralik po myslivecku {Coniglio alla Cacciatora} na bilem vine s rajcaty, paprikami, zampiony, bylinkami a olivami, gratinovane brambory, salatek 169</li><li>Kapustove placicky se smazenou cibulkou, bramborovy salat s cerstvymi okurkami, petrzelkou a majonezou {L} 139 </li></ol>
 </td>
 </tr>
 </table>
