Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,38 +7,10 @@
 <h5>Úterý, 23. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a kuřecím masem</strong>
+<strong>OMLOUVÁME SE, ALE DNES 23.11. Z TECHNICKÝCH DŮVODŮ ZAVŘENO</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							33,-
-						</span>
-</p>
-<p>
-<strong>Vepřová plec s cibulovou omáčkou a rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Špagety peperoncino i salsicia s parmazánem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Teplý bufet</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							35,-
-						</span>
-</p>
-<p>
-<strong>Salátový bufet</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							45,-
+							0,-
 						</span>
 </p>
 </div>
