--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -100,7 +100,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thieboudienne – senegalska kulata ryze s kousky rybich filetu, pecenou zeleninou, rajcaty a bylinkami, salatek 139</li><li>Tuby z kalamaru plnene cockovou ryzi s tunakem v rajcatove bylinkove omacce, pecene baby brambory, salatek, salatek 175</li><li>Kow mo daeng – grilovane thajske veprove ve sladke a vonave marinade s badyanem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami kanci kyty, paprickami jalapenos, kapustou a parmezanem 169 {L} </li><li>Smazena pakora {cizrnove smazenky} s dyni, kvetakem a zeleninou, pecene baby brambory, jogurtovy dip, salatek</li></ol>
+<ol><li>Thieboudienne – senegalska kulata ryze s kousky rybich filetu, pecenou zeleninou, rajcaty a bylinkami, salatek 139</li><li>Tuby z kalamaru plnene cockovou ryzi s tunakem v rajcatove bylinkove omacce, pecene baby brambory, salatek, salatek 175</li><li>Kow mo daeng – grilovane thajske veprove ve sladke a vonave marinade s badyanem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami kanci kyty, paprickami jalapenos, kapustou a parmezanem 169 {L} </li><li>Smazena pakora {cizrnove smazenky} s dyni, kvetakem a zeleninou, pecene baby brambory, jogurtovy dip, salatek  139,-</li></ol>
 </td>
 </tr>
 </table>
