Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,10 +7,17 @@
 <h5>Středa, 24. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>OMLOUVÁME SE, ALE DNES 23.11. Z TECHNICKÝCH DŮVODŮ ZAVŘENO</strong>
+<strong>Polévka ze žluté čočky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							0,-
+							33,-
+						</span>
+</p>
+<p>
+<strong>Rajská hovězí pečeně s houskovým knedlíkem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							129,-
 						</span>
 </p>
 </div>
