Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -125,7 +125,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thieboudienne – senegalska kulata ryze s kousky rybich filetu, pecenou zeleninou, rajcaty a bylinkami, salatek 139</li><li>Tuby z kalamaru plnene cockovou ryzi s tunakem v rajcatove bylinkove omacce, pecene baby brambory, salatek, salatek 175</li><li>Kow mo daeng – grilovane thajske veprove ve sladke a vonave marinade s badyanem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami kanci kyty, paprickami jalapenos, kapustou a parmezanem 169 {L} </li><li>Smazena pakora {cizrnove smazenky} s dyni, kvetakem a zeleninou, pecene baby brambory, jogurtovy dip, salatek  139,-</li></ol>
+<ol><li>Peceny filet z norskeho slede s holandskou omackou s celozrnnou horcici, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s kapustou, salatek z cervene  repy 169</li><li>Pecena kachna s merunkovym catny, korenena ryze s beluga cockou, salatek 139</li><li>Burrito s uzenym hovezim pastrami, cervenou repou, ledovym salatem a krenovym dresinkem, pecene brambory, jogurtovy dip, salatek (L) 169</li><li>Indicke zampionove kari s rajcaty, paprikami, kokosovym mlekem a balkanskym syrem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
