--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 25. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka ze žluté čočky</strong>
+<strong>Vývar se zeleninou a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Rajská hovězí pečeně s houskovým knedlíkem</strong>
+<strong>Selský Vepřový plátek s kroketami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
 <strong>Míchaný salát s kuřecími stripsy</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 25.11.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Věneček </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Banánový cheesecake </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Houbový krém, rozmarýnový olej samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Houbový krém, rozmarýnový olej s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Lasagne s kuřecím masem a špenátem, bylinková omáčka, rukola, dýňové semínko <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Hovězí nudličky v teriyaki omáčce, jasmínová rýže, zázvor, mungo, koriandr <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>300g Červená řepa po burgundsku, restované bramborové noky s bylinkovou strouhankou, kořenová zelenina, žampiony <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -122,7 +157,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede s holandskou omackou s celozrnnou horcici, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho norskeho lososa s holandskou omackou s celozrnnou horcici, stouchane brambory s kapustou, salatek z cervene  repy 169</li><li>Pecena kachna s merunkovym catny, korenena ryze s beluga cockou, salatek 139</li><li>Burrito s uzenym hovezim pastrami, cervenou repou, ledovym salatem a krenovym dresinkem, pecene brambory, jogurtovy dip, salatek (L) 169</li><li>Indicke zampionove kari s rajcaty, paprikami, kokosovym mlekem a balkanskym syrem, jasminova ryze 139</li></ol>
+<ol><li>Peceny cerstvy pstruh s omackou z pecenych paprik, zeleninovy kuskus, salatek (L) 139</li><li>Peceny cerstvy morsky vlk s omackou z pecenych paprik, zeleninovy kuskus, salatek (L) 169</li><li>Hovezi licka na cervenem vine s korenovou zeleninou, jasminova ryze, salatek 139</li><li>Danci burger (rajce, krehke zeli, barbecue majoneza, cedar), pecene baby brambory, salatek (L) 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, pak coj a parmezanem (L) 139</li></ol>
 </td>
 </tr>
 </table>
