Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -21,7 +21,7 @@
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s kuřecími stripsy</strong>
+<strong>Zapečená brokolice slaninou a sýrem s vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							125,-
