Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 26.11.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Čokoládový větrník </div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Banánový cheesecake </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka s uzeným masem samostatně <em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka s uzeným masem s menu <em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Vepřová pečeně po hambursku, pečená slanina, kyselá okurka, houskový knedlík nebo dušená rýže <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilovaný candát, karotkovo-petrželové puré, restované fava fazole, pečená rajčata Datterino, bramborový chips, šafránová omáčka <em title="Ryby">4</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">189 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Zapečený květák s batáty, smetana, vejce, vařené brambory, míchaný trhaný salát  <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -125,7 +160,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh s omackou z pecenych paprik, zeleninovy kuskus, salatek (L) 139</li><li>Peceny cerstvy morsky vlk s omackou z pecenych paprik, zeleninovy kuskus, salatek (L) 169</li><li>Hovezi licka na cervenem vine s korenovou zeleninou, jasminova ryze, salatek 139</li><li>Danci burger (rajce, krehke zeli, barbecue majoneza, cedar), pecene baby brambory, salatek (L) 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, pak coj a parmezanem (L) 139</li></ol>
+<ol><li>Peceny atlanticky hejk s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve smuhy a tresky s krenovou jogurtovou omackou, pecene baby brambory, salatek 169</li><li>Grilovany recky veprovy kebab Souvlaki, okurkove tzatziki, zeleninovy kuskus, salatek {L} 139</li><li>Bramborove gnocchi s trhanou danci pleci pecenou na cervenem vine a korenove zelenine, parmezan, salatek {L} 169</li><li>Indicky dal z cervene cocky s pak coj, rajcaty a sazenym vejcem, jasminova ryze, salatek 139</li></ol>
 </td>
 </tr>
 </table>
