Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -160,7 +160,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve smuhy a tresky s krenovou jogurtovou omackou, pecene baby brambory, salatek 169</li><li>Grilovany recky veprovy kebab Souvlaki, okurkove tzatziki, zeleninovy kuskus, salatek {L} 139</li><li>Bramborove gnocchi s trhanou danci pleci pecenou na cervenem vine a korenove zelenine, parmezan, salatek {L} 169</li><li>Indicky dal z cervene cocky s pak coj, rajcaty a sazenym vejcem, jasminova ryze, salatek 139</li></ol>
+<ol><li>Peceny atlanticky hejk s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstve smuhy a tresky s krenovou jogurtovou omackou, pecene baby brambory, salatek 169</li><li>Grilovany recky veprovy kebab Souvlaki, okurkove tzatziki, zeleninovy kuskus, salatek {L} 139</li><li>Bramborove gnocchi s trhanou danci pleci pecenou na cervenem vine a korenove zelenine, parmezan, salatek {L} 169</li><li>Indicky dal z cervene cocky s pak coj, rajcaty ajowanem a sazenym vejcem, jasminova ryze, salatek 139</li></ol>
 </td>
 </tr>
 </table>
