--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 26. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a kuřecím masem</strong>
+<strong>Polévka z červené řepy</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Selský Vepřový plátek s kroketami a tatarkou</strong>
+<strong>Vepřová plec na smetaně a tymiánu s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Zapečená brokolice slaninou a sýrem s vařeným bramborem</strong>
+<strong>Sladká rýže se švestkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							105,-
 						</span>
 </p>
 <p>
